Time: 2 ms (83.13%), Space: 44.8 MB (31.88%) - LeetHub