@@ -1,27 +1,26 @@
-//시간복잡도: O(2^n)
 class Solution {
     public List<List<Integer>> combinationSum(int[] candidates, int target) {
-        List<List<Integer>> answer = new ArrayList<>();
+        List<List<Integer>> answer = new LinkedList<>();
 
-        dfs(answer, candidates, 0, target, new ArrayList<>());
+        sum(candidates, target, 0, new ArrayList<>(), answer);
 
         return answer;
     }
 
-    public void dfs(List<List<Integer>> answer, int[] candidates, int index, int target, List<Integer> sumNums) {
-        if(target == 0) {
-            answer.add(new ArrayList<>(sumNums));
+    public void sum(int[] candidates, int remain, int index, List<Integer> nums, List<List<Integer>> answer) {
+        if(remain == 0) {
+            answer.add(new ArrayList<>(nums));
             return;
         }
 
-        if(target < 0) {
+        if(remain < 0) {
             return;
         }
 
         for(int i = index; i < candidates.length; i++) {
-            sumNums.add(candidates[i]);
-            dfs(answer, candidates, i, target - candidates[i], sumNums);
-            sumNums.removeLast();
+            nums.add(candidates[i]);
+            sum(candidates, remain - candidates[i], i, nums, answer);
+            nums.remove(nums.size() - 1);
         }
     }
 }
